# TG_DAC

./: .gitignore  CMakeLists.txt  convert_files.py  new_server.py  plotter.py  tcp_server.py  test.c  test.txt  test_client.py  todos.txt
DAC_0010/23_07_04/lm35_1/: 03_54_17.txt  03_55_16.txt  03_55_23.txt
DAC_0010/23_07_04/lm35_2/: 03_54_17.txt  03_55_16.txt  03_55_23.txt
DAC_0010/23_07_04/termo1/: 03_54_17.txt  03_55_16.txt  03_55_23.txt
DAC_0010/23_07_04/termo2/: 03_54_17.txt  03_55_16.txt  03_55_23.txt
components/ads_sensor/: CMakeLists.txt  ads_sensor.c  ads_sensor.h
components/my_buttons/: CMakeLists.txt  my_buttons.c  my_buttons.h
components/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h
components/wifi/: CMakeLists.txt  wifi_sta.c  wifi_sta.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
tmp/: _main.c  aux_main_time.c  aux_main_tmp.c  button.c  connect.c  connect.h  non_block_sock.c
